--- a/fastapi_app/templates/index.html
+++ b/fastapi_app/templates/index.html
@@ -165,7 +165,7 @@
     </div>
       
 
-    <h4 id="page-title" class="center-align blue-text text-darken-2">Ask a Question</h4>
+    <h4 id="page-title" class="center-align blue-text text-darken-2">Enter your context and question</h4>
     <div class="hero-line"></div>
 
     <div class="card">
